syntax = "proto3";
package auth.proto;

import "common.proto";
import "common_fish.proto";

message LoginCall {
    common.proto.EMSGID msgid                                              = 1;
    string game                                                            = 2;
    string language                                                        = 3;
    string merchantCode                                                    = 4;
    string acct_id                                                         = 5;
    string sid                                                             = 6;
    string token                                                           = 7;
    string type                                                            = 8;
    string currency                                                        = 9;
}

message LoginRecall {
    common.proto.EMSGID msgid                                              = 1;
    common.proto.Status.Code status_code                                   = 2;
    string token                                                           = 3;
    string backend_version                                                 = 4;
}

message UserInfoAsk {
    common.proto.EMSGID msgid                                              = 1;
    repeated UserInfo player                                               = 2;
}

message UserInfo {
    message Column {
        bool id                                                            = 1;
        bool name                                                          = 2;
        bool balance                                                       = 3;
        bool avatar                                                        = 4;
    }
    string player_id                                                       = 1;
    string player_name                                                     = 2;
    uint64 player_cent                                                     = 3;
    uint32 seat_id                                                         = 4;
    common.fish.proto.BetRateLine bet_rate_line                            = 5;
    string avatar_id                                                       = 6;
    Column visible                                                         = 7;
    PLAYER_TYPE player_type                                                = 8;
    string credit_format                                                   = 9;
}

message BroadcastPlayerIn {
    common.proto.EMSGID msgid                                              = 1;
    string room_uuid                                                       = 2;
    repeated UserInfo player                                               = 3;
}

message BroadcastPlayerOut {
    common.proto.EMSGID msgid                                              = 1;
    string room_uuid                                                       = 2;
    UserInfo player                                                        = 3;
}

enum PLAYER_TYPE {
    GAME                                                                   = 0;  // Player
    BOT                                                                    = 1;  // BOT
}
